2008-04-23  Sancho Lerena <slerena@artica.es>

        * Config.pm: Added dataserver_thread config token

        * bin/pandora_plugin: Some minimal thread improvements (yield)

        * bin/pandora_server: Uses dataserver_thread token to set up
        number of starting threads.

        * bin/pandora_network: Added more thread yields.

        * util/plugin: Added new directory for "standard" plugins. 
        Added the first plugins here. Expect more in the future :-)

        * plugin/openvpn_pandoraplugin.pl: Connects to openvpn daemon
        and report number of active sessions.

        * plugin/ssh-exec_pandoraplugin.pl: Execute a remote command
        using Perl (Net::SSH::Perl) SSH functions.

2008-04-22  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_plugin, bin/pandora_prediction,
	  bin/pandora_network: Consumer threads now check for data
	  availability after lock() to avoid race conditions.

2008-04-22  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: The data server now uses the producer/consumer
	  model, like the rest of the servers. .checksum files are no longer
	  used.

2008-04-17  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Shorten description in help.

	* lib/PandoraFMS/DB.pm: Data server module autocreation don't
	assign a id_module to tagente_module record. Fixed.

2008-04-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Small code optimization. Took a couple
	  of prepare statements out of a loop.

2008-04-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Rewrote the alert engine. Small fixes.

2008-04-09  Sancho Lerena <slerena@gmail.com>

	* AUTHORS, README: Updated.

	* util/pandora_db.pl: Modified version of compactation funtion
	needs to be tested, not functional yet.

	* Makefile.PL: Updated install for new servers.

	* bin/pandora_snmpconsole, pandora_export, pandora_recon,
	pandora_server: Fix problem with old daemonize call.

2008-04-08  Sancho Lerena <slerena@gmail.com>
