@@ -1,3 +1,8 @@
+2008-04-24  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_db.pl: Rewrote and enabled pandora_compactdb.
+	  Small fix to pandora_purgedb.
+
 2008-04-23  Sancho Lerena <slerena@artica.es>
 
         * Config.pm: Added dataserver_thread config token
